<resources>
    <string name="app_english_name">Orange Broswer</string>
    <string name="app_name">Orange</string>
    <!--lixiaofei-->
    <string name="search">搜索</string>
    <string name="search_hint">搜索或输入网址</string>
    <string name="to_login">立即登录</string>
    <string name="add_into_collection">添加收藏</string>
    <string name="my_collection">我的收藏</string>
    <string name="history">历史记录</string>
    <string name="collection">收藏</string>
    <string name="exiting">退出</string>
    <string name="setting_in_pop_window">设置</string>
    <string name="cancel">取消</string>
    <string name="save_successfully">保存成功</string>
    <string name="save_photo">保存本地</string>
    <string name="dialog_title">警告</string>
    <string name="dialog_message">您访问的网页存在潜在危险，是否继续访问？</string>
    <string name="OK">确认</string>
    <string name="CANCEL">取消</string>
    <string name="change_password">修改密码</string>
    <string name="logoff_text">注销后会删除除历史记录外的所有用户数据</string>
    <string name="logoff">注销</string>
    <string name="reload">刷新</string>
    <string name="confirm_password">验证密码</string>
    <string name="yes">确认</string>
    <!--end-->
    <string name="setting">设置</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="password_hint">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="login_back">login_back</string>
    <string name="register_back">register_back</string>
    <string name="register_text">注册</string>
    <string name="register_password">请设置密码</string>
    <string name="regesiter_password2_hint">请重复设置密码</string>
    <string name="not_register">还没有账号？</string>
    <string name="now_to_register">马上注册</string>
    <string name="register_btn">注册</string>
    <string name="now_to_login">立即登录</string>
    <string name="have_registered">已有账号？</string>
    <string name="delete_all">清空</string>
    <string name="delete">删除</string>
    <string name="logout">退出登录</string>
    <string name="logout_text">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="change_usr_name">修改昵称</string>
    <string name="change_usr_password">修改密码</string>
    <string name="usr_phone">手机号</string>
    <string name="close_account">注销账号</string>
    <string name="dark_mode">夜间模式</string>
    <string name="wuhen_mode">无痕浏览</string>
    <string name="delete_all_history_text">确认清空历史记录</string>
    <string name="delete_all_collection_text">确认清空所有收藏</string>
    <string name="login_text">登录后才能使用该功能</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_name_text">修改昵称</string>
    <string name="change_name_btn">修改</string>
    <string name="change_image_text">更换头像</string>
    <string name="from_photo_text">从相册中选取</string>
    <string name="take_photo_text">拍摄照片</string>
    <string name="add_collection_successfully">添加收藏成功</string>
    <string name="add_lnk">添加快捷</string>
    <string name="quick_name">快捷网址名称</string>
    <string name="quick_url">www.xxxx.com</string>


    <string name="discover_title">ByteDance</string>
    <string name="discover_content">Inspire Creativity, Enrich Life</string>
    <string name="discover_culture_title">Culture</string>
    <string name="discover_culture_content">ByteStyle is fundamental to corporate culture at ByteDance and represents the principles we uphold as employees.</string>
    <string name="discover_content_1"> Raise the bar.
        Wait for bigger gains.
        Find the best solutions by widening your perspective.
        Be attentive.
    </string>
    <string name="discover_content_2">Make your own discoveries.
        Dive deep into facts.
        Stay level-headed. Focus on impact.
        Assume ownership, take risks, break the mold.
    </string>
    <string name="discover_content_3">Trust yourself, trust each other.
        Be willing to offer and ask for help. Collaboration creates value.
    </string>
    <string name="discover_content_4">Dare to share your honest opinions.
        It is okay to make mistakes.
        Own it when you do.
        Stick to the facts, identify issues.
    </string>
    <string name="discover_content_5">Take initiative and push boundaries — there is no task too big or too small.
        Be resilient. Face reality and change it.
    </string>
    <string name="discover_content_6">Be tenacious in making sure that the diversity of the world is reflected in your team.
        Welcome people as they are, value uniqueness.
    </string>
</resources>