<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--登录头部导航栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/register_back"
            android:id="@+id/back_btn"
            android:layout_width="57dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/back_page" />

        <TextView
            android:id="@+id/register_text"
            android:layout_width="335dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/register_text"
            android:textSize="26sp" />
    </LinearLayout>
    <!--注册的输入框-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/user_phone"
            android:layout_width="360dp"
            android:layout_height="100dp"
            android:autofillHints="@string/phone_hint"
            android:ems="11"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:theme="@style/MyEditText" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="360dp"
            android:layout_height="100dp"
            android:autofillHints="@string/password_hint"
            android:ems="10"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:theme="@style/MyEditText"/>

        <EditText
            android:id="@+id/user_password2"
            android:layout_width="360dp"
            android:layout_height="100dp"
            android:autofillHints="@string/regesiter_password2_hint"
            android:ems="10"
            android:hint="@string/regesiter_password2_hint"
            android:inputType="textPassword"
            android:theme="@style/MyEditText"/>

        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_btn_shape"
            android:backgroundTint="@color/main_color"
            android:gravity="center"
            android:text="@string/register_btn" />
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/have_registered"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/to_login"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/now_to_login"
                android:textColor="#91AFC6"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>