<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--登录头部导航栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="57dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/login_back"
            app:srcCompat="@drawable/back_page" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="335dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_btn"
            android:textSize="26sp" />
    </LinearLayout>
    <!--登录的输入框-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="388dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_phone"
            android:layout_width="360dp"
            android:layout_height="100dp"
            android:autofillHints="@string/phone_hint"
            android:ems="13"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:theme="@style/MyEditText"/>

        <EditText
            android:id="@+id/user_password"
            android:layout_width="360dp"
            android:layout_height="100dp"
            android:autofillHints="@string/password_hint"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:theme="@style/MyEditText"/>

        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_btn_shape"
            android:backgroundTint="@color/main_color"
            android:gravity="center"
            android:text="@string/login_btn" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/not_register"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/to_register"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/now_to_register"
                android:textColor="#91AFC6"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>