<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:background="@drawable/pop_window_border">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/user"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/go_to_login"
                android:textStyle="bold"
                android:textSize="17dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/to_login"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:elevation="5dp"
                    android:background="@drawable/menu_icon_bg_border">
                    <ImageView
                        android:id="@+id/add_collection"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:src="@drawable/add_collection"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="12dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/add_into_collection"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:elevation="5dp"
                    android:background="@drawable/menu_icon_bg_border">
                    <ImageView
                        android:id="@+id/collection"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:src="@drawable/collection"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="12dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/my_collection"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:elevation="5dp"
                    android:background="@drawable/menu_icon_bg_border">
                    <ImageView
                        android:id="@+id/history"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:src="@drawable/history"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="12dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/history"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:elevation="5dp"
                    android:background="@drawable/menu_icon_bg_border">
                    <ImageView
                        android:id="@+id/setting"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:src="@drawable/setting"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="12dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/setting_in_pop_window"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:elevation="5dp"
                    android:background="@drawable/menu_icon_bg_border">
                    <ImageView
                        android:id="@+id/exit"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:src="@drawable/quit"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="12dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/exiting"
                    android:gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/menu_line"/>

        <Button
            android:id="@+id/cancel_pop_window"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@null" />
    </LinearLayout>
</LinearLayout>
